added rsvp buttons, end date, and related styles

--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -48,6 +48,10 @@ img {
 #evt_title {
     text-align: center;
 }
+#rsvp {
+    display: flex;
+    flex-flow: column;
+}
 
 /* to-do
 add margins around form elements
