started stitching together front and back end, added invite page, added routes/controllers

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,10 +7,14 @@
     </head>
     <body>
         <h1>make an event. tell your friends. kiss your enemies.</h1>
-        <form action="" method="POST" id="eventmake">
+        <form action="../events" method="POST" id="eventmake">
             <p>
                 <label for="name">GIVE ME UR NAME:</label>
                 <input type="text" id="name" name="name">
+            </p>
+            <p>
+                <label for="phone">GIVE ME UR #:</label>
+                <input type="text" id="phone" name="phone">
             </p>
             <p>
                 <label for="event">now...give me ur EVENT NAME:</label>
@@ -43,7 +47,7 @@
             <p>
                 <label for="end">exactly what time does it end though?</label>
                 <input type="time" id="end" name="end">
-            </p>
+            </p>>
             <p>
                 <label for="editpass">wan 2 add a secwet phwase to give u absowute authowity? uwu</label>
                 <!--this should probably be a text field instead-->
