--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>make an event. tell your friends. kiss your enemies.</h1>
-        <form action="../events" method="POST" id="eventmake">
+        <form action="/events/new" method="POST" id="eventmake">
             <p>
                 <label for="name">GIVE ME UR NAME:</label>
                 <input type="text" id="name" name="name">
