--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,62 @@
-test
-<%= @event.id %>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>this is your event bitch</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <section id="eventfront">
+            <div id="wrapper">
+                <div id="left">
+                    <div>
+                        <img id="evt_header" src="placeholder.jpg" alt="event header image">
+                    </div>
+                    <div>
+                        <h1 id="evt_title"><%= @event.name %></h1>
+                    </div>
+                    <div id="info">
+                        <div class="infobox">
+                            <p id="evt_host">Hosted by cat_luvr_0401</p>
+                            <p id="evt_start"> <%= @event.start %> </p>
+                        </div>
+                        <div class="infobox">
+                            <p id="evt_loc"> <%= @event.location  %></p>
+                            <p id="evt_end"> <%= @event.end %></p>
+                        </div>
+                    </div>
+                    <div>
+                        <p id="evt_desc"> <%= @event.description %></p>
+                    </div>
+                </div>
+                <div id="right">
+                    <form action="" mode="POST" id="editaccess">
+                        <label for="editauth">edit the event?</label>
+                        <input type="password" id="editauth" name="editauth" size=20>
+                        <!--validate the password on submit, right?-->
+                        <input type="submit" value="edit!">
+                    </form>
+                    <br>
+                    <p><b>RSVP here!</b></p>
+                    <form action="" mode="POST" id="rsvp">
+                        <div>
+                            <input type="radio" id="going" name="rsvp-buttons" value="going">
+                            <label for="going">i'm going!</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="maybe" name="rsvp-buttons" value="maybe">
+                            <label for="maybe">i'm not sure...</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="not-going" name="rsvp-buttons" value="not-going">
+                            <label for="not-going">i can't go :(</label>
+                        </div>
+                        <input type="submit" value="rsvp! oh my god this is wider than i thought i'll fix that later">
+                    </form>
+                    <br>
+                    <p>comments section/discord chat over here?</p>
+                </div>
+            </div>
+        </section>
+    </body>
+</html>
