--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -14,6 +14,11 @@ img {
     margin: auto;
     border-radius: 10px;
 }
+.editbutton {
+    color: #eee;
+    background-color: #333;
+    border: none;
+}
 
 /* event front styles */
 #wrapper {
