add rsvp page refresh and show who has rsvp on event show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -66,6 +66,11 @@
                       <% end %>
                     <% end %>
                     <br>
+                      <% @attendees.each do |attendee| %>
+                      <%=   "#{attendee.name}: #{attendee.rsvp}" %>
+                      <% end %>
+
+                    <br>
                     <p>comments section/discord chat over here?</p>
                     <% if session[:event_id] == @event.id %>
                     <p> <%= "you are logged in"  %> </p>
