add route and link for new attendees page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -73,7 +73,7 @@
                     <br>
                     <p>comments section/discord chat over here?</p>
                     <% if session[:event_id] == @event.id %>
-                    <p> <%= "you are logged in"  %> </p>
+                    <p> <%= link_to("invite yur m8s", "/events/#{@event.id}/attendees/new") %> </p>
                     <% end %>
                 </div>
             </div>
