--- a/app/views/attendees/new.html.erb
+++ b/app/views/attendees/new.html.erb
@@ -20,15 +20,15 @@
             let's add...
             <button onclick="add_attendee();">another one</button>
         </p>
-        <form action="../events/:event_id/attendees" method="POST" id="invites">
+        <form action="/events/<%= @event.id %>/attendees" method="POST" id="invites">
             <div class="attendee">
                 <p>
                     <label for="guest">NAME your guest:</label>
-                    <input type="text" id="guest" name="guest">
+                    <input type="text" id="guest" name="name[]">
                 </p>
                 <p>
                     <label for="guest-phone">GIVE ME THEIR #:</label>
-                    <input type="text" id="guest-phone" name="guest-phone">
+                    <input type="text" id="guest-phone" name="phone_number[]">
                 </p>
             </div>
             <p>
@@ -52,7 +52,7 @@
                 label1.innerHTML = 'NAME your guest:';
                 let input1 = document.createElement('input');
                 input1.type = 'text';
-                input1.name = 'guest';
+                input1.name = 'name[]';
                 p1.appendChild(label1);
                 p1.appendChild(input1);
 
@@ -62,7 +62,7 @@
                 label2.innerHTML = 'GIVE ME THEIR #:';
                 let input2 = document.createElement('input');
                 input2.type = 'text';
-                input2.name = 'guest-phone';
+                input2.name = 'phone_number[]';
                 p2.appendChild(label2);
                 p2.appendChild(input2);
 
