add required to name/number/event_name when making a new event

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -10,15 +10,15 @@
         <form action="/events/new" method="POST" id="eventmake">
             <p>
                 <label for="name">GIVE ME UR NAME:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="name" required="required">
             </p>
             <p>
                 <label for="phone">GIVE ME UR #:</label>
-                <input type="text" id="phone" name="phone">
+                <input type="text" id="phone" name="phone" required="required">
             </p>
             <p>
                 <label for="event">now...give me ur EVENT NAME:</label>
-                <input type="text" id="event" name="event" size=50>
+                <input type="text" id="event" name="event" required="required" size=50>
             </p>
             <p>
                 <label for="pic">Pick a pic (lol):</label>
