--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -52,14 +52,28 @@
                         <%= form.label :not_going, "i can't go :(" %>
                         <%= form.submit 'Submit' %>
                       <% end %>
-                    <% end %>
                     <br>
                       <% @attendees.each do |attendee| %>
                       <%=   "#{attendee.name}: #{attendee.rsvp}" %>
                       <br>
                       <% end %>
                     <br>
-                    <p>comments section/discord chat over here?</p>
+                      <% @attendee.rooms.distinct.each do |room| %>
+                        <div class="chat" data-channel-subscribe="room" data-room-id="<%= room.id %>">
+                          <p>Room: <%= room.name %></p>
+                          <% room.chats.each do |chat| %>
+                            <div class="message-content">
+                              <%= chat.message %>
+                            </div>
+                          <% end %>
+                        </div>
+                        <%= form_with(url: "/events/#{@event.id}/attendees/#{@attendee.id}/rooms/#{room.id}/chats", method: :post, id: "message") do |form| %>
+                          <%= form.text_field :message %>
+                          <%= form.submit 'Submit' %>
+                        <% end %>
+                      <% end %>
+                    <% end %>
+
                     <% if session[:event_id] == @event.id %>
                     <p> <%= link_to("invite yur m8s", "/events/#{@event.id}/attendees/new") %> </p>
                     <p> <%= button_to("logout", "/events/#{@event.id}/login", method: :delete) %> </p>
@@ -70,4 +84,11 @@
             </div>
         </section>
     </body>
+
+  <div class="d-none" data-role="message-template">
+    <div class="message-content" data-role="message-text">
+    </div>
+  </div>
+
+
 </html>
