--- a/app/views/attendee_otp/index.html.erb
+++ b/app/views/attendee_otp/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>this is your event bitch </title>
+        <title>you lookin' for me? </title>
         <meta charset="utf-8">
 
     </head>
@@ -15,7 +15,7 @@
                 </p>
                 <p>
                     hit this:
-                    <input type="submit" value="INVITE" onclick="return disable(this);">
+                    <input type="submit" value="SMASH" onclick="return disable(this);">
                 </p>
 
             </div>
